--- a/portfolio.css
+++ b/portfolio.css
@@ -12,11 +12,11 @@ body{
 }
 .first{
     width: 100%;
-    height: 82vh;
+    min-height: 80vh;
     background: url(spiderweb.jpg);
     background-position: center;
     background-size: cover;
-    opacity: .8;
+    opacity: .5;
 }
 .logo{
     width: 129px;
@@ -27,40 +27,64 @@ body{
 }
 .menu{
     width: 90%;
-    height: 50px;
+    min-height: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     color: white;
-    margin-left: 5%;
+    margin-left: 1%;
     position: sticky;
     top: 1%;
-    color: white;
     font-weight: bold;
     opacity: 1;
 }
+.slidepage{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#logo{
+    opacity: 0;
+}
+.first .menu .slidepage a{
+     color: deepskyblue;
+     font-weight: bold;
+     font-family: 'Courier New', Courier, monospace;
+     opacity: 1;
+}
+label{
+    color: white;
+    margin-left: 1%;
+    position: fixed;
+    z-index: 200;
+}
+label:hover{
+    color: gold;
+}
 .title{
     width: 32%;
-    height: 14%;
+    height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 13% auto;
-    color: gold;
-    opacity: 1;
+    margin: -25% auto;
+    color: green;
+    opacity: 3;
+    margin-bottom: 10%;
 }
 /* typing animation */
 .main-title{
     width: 100%;
     width: 60ch;
-    color: orange;
+    color: black;
 }
 .main-title>h1{
     overflow: hidden;
     white-space: nowrap;
     margin: 0 auto;
     letter-spacing: .2em;
+    opacity: 1;
     border-right: 3px solid red;
     animation: printing 10s steps(27, end)
     infinite, blink .5s step-end infinite;
@@ -87,7 +111,8 @@ body{
     opacity: 1;
 }
 .icons i{
-    color: orange;
+    color: black;
+    opacity: 1;
 }
 .icons #ione:hover{
     color: yellowgreen;
@@ -102,6 +127,7 @@ body{
     background: rgba(223,24,23,.4);
     padding: 4px 4px;
 } 
+ 
 /* second page */
 #aboutmebtn{
     border: none;
@@ -249,8 +275,12 @@ box5:hover h3 {
 
 
  
-h2, h3, h5{
+h2 {
     text-align: center;
+}
+h3, h5{
+    text-align: center;
+    border-bottom: 1px solid silver;
 }
 h7{
     margin-left: 100px;
@@ -400,25 +430,35 @@ h7{
 
 /* media query */
 @media only screen and (max-width: 550px){
-    .aboutme{
-        width: 96%;
-        height: 90%;
-        margin-left: 2%;
+    .first{
+        width: 100%;
+        min-height: 80%;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: left;
-    }
+    } 
     .menu{
-        width: 45%;
-        height: 60%;
-        background: rgba(23,124,23,.7);
         display: flex;
         flex-direction: column;
         align-items: left;
         font-size: 20px;
         justify-content: space-evenly;
         margin-top: 4%;
+        background: none;
+    }
+    .slidepage{
+        width: 120px;
+        height: 200px;
+        background: rgba(223,24,23,.9);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 18px;
+        justify-content: space-evenly;
+        box-shadow: 4px 5px 6px black;
+        margin-left: 2%;
+        position: relative;
     }
     .title{
         width: 90%;
@@ -427,6 +467,15 @@ h7{
     }
     .icons{
         margin-top: 5%; 
+    }
+    .aboutme{
+        width: 96%;
+        height: 90%;
+        margin-left: 2%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: left;
     }
     .aboutme1{
         width: 100%;
@@ -591,6 +640,39 @@ h7{
 }
 
 @media (min-width: 550px) and (max-width: 1100px){
+    .first{
+        width: 100%;
+        min-height: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: left;
+    } 
+    .menu{
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        font-size: 20px;
+        justify-content: center;
+    }
+    .slidepage{
+        width: 150px;
+        height: 225px;
+        background: rgba(223,24,23,.7);
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        font-size: 20px;
+        justify-content: center;
+        box-shadow: 4px 5px 6px black;
+        z-index: 200;
+        position: relative;
+        overflow: hidden;
+    }
+    .title{
+        width: 90%;
+        font-size: 18px;
+    }
     .aboutme{
         width: 88%;
         height: 100%;
@@ -599,6 +681,7 @@ h7{
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
+        margin-top: 1%;
     }
     .aboutme1{
         width: 100%;
@@ -612,7 +695,7 @@ h7{
     .menu{
         width: 45%;
         height: 60%;
-        background: rgba(23,124,23,.7);
+        
         display: flex;
         flex-direction: column;
         align-items: left;
@@ -781,3 +864,16 @@ h7{
             margin-left: 5%;
         }
 }
+/* humburger */
+.slidepage{
+    min-width: 100%;
+    min-height: 50px;
+    position: absolute;
+    left: -150%;
+    top: 0px;
+    transition: 1s;
+}
+#logo:checked+.slidepage{
+    left: 0;
+}
+ 
