--- a/portfolio.css
+++ b/portfolio.css
@@ -16,7 +16,6 @@ body {
   background: url(spiderweb.jpg);
   background-position: center;
   background-size: cover;
-  opacity: 0.5;
 }
 .logo {
   width: 129px;
@@ -69,7 +68,7 @@ label:hover {
   justify-content: center;
   align-items: center;
   margin: -25% auto;
-  color: green;
+  color: rgba(223, 24, 23, 0.8);
   opacity: 3;
   margin-bottom: 10%;
 }
@@ -77,7 +76,7 @@ label:hover {
 .main-title {
   width: 100%;
   width: 60ch;
-  color: black;
+  color: rgba(23, 53, 163, 1);
 }
 .main-title > h1 {
   overflow: hidden;
@@ -154,9 +153,9 @@ label:hover {
   color: silver;
 }
 .col-md-4 {
-  background: url(coding3.jpg);
+  background: url(coding2.jpg);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 /* bezier effect */
@@ -917,4 +916,51 @@ h7 {
 .li > a {
   color: black;
   font-size: 16px;
+}
+/* cv-unavailable */
+#cv-button {
+  border: none;
+  background: rgba(35, 124, 23, 0.7);
+  height: 30px;
+}
+.cv-absent {
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 60%;
+  padding: 1% 3%;
+  position: absolute;
+  background: rgba(23, 53, 63, 0.9);
+  color: white;
+  display: none;
+}
+/* close-box */
+.close-box {
+  margin-top: 1%;
+  margin-left: 90%;
+}
+.digitalCv-absent {
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 60%;
+  padding: 1% 3%;
+  position: absolute;
+  background: rgba(23, 53, 63, 0.9);
+  color: white;
+  display: none;
+}
+/* close-myBox */
+.close-myBox {
+  margin-top: 1%;
+  margin-left: 90%;
+}
+#ithree {
+  height: 50px;
+  border-radius: 15%;
+  border: none;
 }
