--- a/portfolio.css
+++ b/portfolio.css
@@ -446,7 +446,7 @@ h7 {
 }
 
 /* media query */
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 551px) {
   .first {
     width: 100%;
     height: 80%;
@@ -454,6 +454,10 @@ h7 {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: left;
+  }
+  .first > label {
+    position: absolute;
+    margin-top: -50%;
   }
   .menu {
     display: flex;
@@ -463,10 +467,12 @@ h7 {
     justify-content: space-evenly;
     margin-top: 4%;
     background: none;
+    margin-left: 1%;
+    position: sticky;
   }
   .slidepage {
-    width: 120px;
-    height: 200px;
+    width: 140px;
+    height: 270px;
     background: rgba(223, 24, 23, 0.9);
     display: flex;
     flex-direction: column;
@@ -496,11 +502,11 @@ h7 {
   }
   .aboutme1 {
     width: 100%;
-    height: 48%;
+    min-height: 100%;
   }
   .skills {
     width: 100%;
-    height: 48%;
+    min-height: 100%;
     margin-top: 1%;
   }
   /* h4 {
@@ -614,16 +620,16 @@ h7 {
   }
   .general-education {
     width: 100%;
-    height: 48%;
+    min-height: 100%;
   }
   .web-related {
     width: 100%;
-    height: 48%;
+    min-height: 100%;
     margin-top: 1%;
   }
 
   .work {
-    width: 96%;
+    width: 100%;
     height: 90%;
     margin-left: 2%;
     display: flex;
@@ -633,11 +639,11 @@ h7 {
   }
   .work-experience {
     width: 100%;
-    height: 48%;
+    min-height: 100%;
   }
   .web-experience {
     width: 100%;
-    height: 48%;
+    min-height: 100%;
     margin-top: 1%;
   }
   .contact {
